k8s/12-order-service-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-canary
  namespace: orbitstack
  labels:
    app: order-service-canary
    app.kubernetes.io/name: order-service-canary
    app.kubernetes.io/part-of: orbitstack-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-canary
  template:
    metadata:
      labels:
        app: order-service-canary
    spec:
      containers:
        - name: order-service
          image: orbitstack/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: order-service-canary
  namespace: orbitstack
  labels:
    app: order-service-canary
    app.kubernetes.io/name: order-service-canary
    app.kubernetes.io/part-of: orbitstack-platform
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: order-service-canary

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbitstack-ingress-order-canary
  namespace: orbitstack
  labels:
    app.kubernetes.io/name: orbitstack-ingress-order-canary
    app.kubernetes.io/part-of: orbitstack-platform
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/limit-rpm: "300"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service-canary
                port:
                  number: 8000
